--- a/style.css
+++ b/style.css
@@ -8,13 +8,17 @@ ul,li,ol{
 }
 .left{
     width: 25vw;
-    padding: 34px;
+    padding: 10px;
 }
 .right{
     width: 75vw;
+}
+.home{
+
 }
 .home ul li{
 width: 14px;
 display: flex;
 gap: 15px;
+padding-top: 15px;
 }
